--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,41 @@
 == Changelog ==
 
+= 10.4.25 08/16/2022 =
+* NEW: Add TikTok to the brand icons set.
+* NEW: Add Telegram, TikTok, and WhatsApp to the default social networks types.
+* NEW: Add Telegram and WhatsApp to the default messenger networks types.
+* NEW: Introduce the `Connections_Directory/Content_Block/Heading` filter.
+* NEW: Introduce `_parse::stringList()` and remove use of deprecated `cnFunction::parseStringList()` function.
+* TWEAK: Remove use of deprecated `bind()` method call.
+* TWEAK: Remove use of deprecated `.removeAttr( 'checked' )` call.
+* TWEAK: Remove use of deprecated `mouseenter()` and `mouseleave()` methods.
+* TWEAK: Make both Telegram and WhatsApp messenger IDs clickable links.
+* TWEAK: Do not escape the pre/append field html to allow for partial HTML.
+* TWEAK: Add 'display' as a safe CSS style.
+* TWEAK: Remove use of deprecated `cnHTML::attribute()` in `Connections_Directory\Map`.
+* TWEAK: Remove legacy `cnValidate` dependency.
+* TWEAK: Remove deprecated methods from `cnUtility`.
+* TWEAK: Remove unused import.
+* TWEAK: Remove unused deprecated `cnSanitize::hexColorNoHash()` method.
+* TWEAK: Tweak `_parse::parameters()` to to allow recursion with excluded index keys.
+* TWEAK: Change all deprecated filter callback closures static.
+* TWEAK: Update `cnEntryMetabox::publish()` to utilize `_parse::parameters()`.
+* TWEAK: Adjust input parameter inheritance in `Radio_Group::prepareInputs()` to allow inputs to have their class, id, name, and styles set independently.
+* TWEAK: Remove deprecated instance of `cnHTML::radio()` used in the entry "Publish" metabox.
+* BUG: Do not add empty strings the field class names.
+* BUG: Do not add empty array key/value pairs to field CSS.
+* OTHER: Delete extra space character.
+* OTHER: Update inline comments.
+* DEV: phpDoc updates.
+* DEV: phpcs:ignore WordPressVIPMinimum.Performance.WPQueryParams.PostNotIn_exclude
+* DEV: Exclude the `WordPress.NamingConventions.PrefixAllGlobals.DynamicHooknameFound` rule in WPCS.
+* DEV: Inline comments must end in full-stops, exclamation marks, or question marks.
+* DEV: @phpcs:disable PEAR.NamingConventions.ValidClassName.StartWithCapital
+* DEV: @phpcs:disable WordPress.NamingConventions.PrefixAllGlobals.NonPrefixedClassFound
+* DEV: Deprecate `cnSanitize::args()`. Use `_parse::parameters()`.
+* DEV: Add deprecated filters for backwards compatibility.
+* DEV: Update dist files.
+
 = 10.4.25 07/28/2022 =
 * NEW: Introduce `Conditional_Content::isRegion()` to enable a region condition support in the `[cn-content]` shortcode.
 * NEW: Introduce the `Connections_Directory/Entry/Action/Save` filter and `Connections_Directory/Entry/Action/Saved` action.
