--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,44 @@
 == Changelog ==
 
+= 10.4.28 09/20/2022 =
+* NEW: Introduce `_sanitize::html()` and `_sanitize::string()`.
+* NEW: Introduce `_string::stripScripts()` and `_string::texturize()`.
+* NEW: Introduce the `Rich_Text` and `Quicktag` fields to the Fields API.
+* TWEAK: Replace instances of deprecated `cnString` with `_string`.
+* TWEAK: Refactor `_string::stripTags()` to utilize `_string::stripScripts()`.
+* TWEAK: Add `trim()` to `_escape::html()`.
+* TWEAK: Refactor `cnCategory::getDescription()` to remove use of deprecated method `cnSanitize::sanitizeString()`.
+* TWEAK: Move and rename the cnCache class file to the Utility folder.
+* TWEAK: Rename `cnCache` to `Connections_Directory\Utility\_cache`.
+* TWEAK: Move and rename the cnFragment class file to the Utility folder.
+* TWEAK: Rename `cnFragment` to `Connections_Directory\Utility\_fragment`.
+* TWEAK: Move deprecated files to Deprecated sub folder and move utility interface to the Utility sub folder.
+* TWEAK: Plugin constants do not need to be declared in a class.
+* TWEAK: Rename plugin constants file.
+* TWEAK: Remove broken and unused repeatable metabox code.
+* TWEAK: Remove unused comment out code.
+* TWEAK: Remove unused class properties in `cnMetabox_Render`.
+* TWEAK: Implement the `Rich_Text` and `Quicktag` fields in both the Settings API and Metabox API to reduce code duplication.
+* BUG: Correct replacement message in deprecated method.
+* BUG: Correct table display in system info so the `id` column is no longer dropped.
+* BUG: Use the `pages` attribute when registering metaboxes. Fixes blank Dashboard admin page.
+* DEV: phpDoc updates.
+* DEV: Remove deprecated `_format::toCamelCase()` method.
+* DEV: Remove deprecated `_format::stripNonNumeric()` method.
+* DEV: Remove use of deprecated `cnFormatting::sanitizeString()` from `cnEntry_vCard`.
+* DEV: Remove use of deprecated `cnFormatting` in `cnEntry`.
+* DEV: Remove deprecated method `_format::sanitizeString()`.
+* DEV: Remove deprecated method `cnSanitize::sanitizeString()`.
+* DEV: Remove unused import.
+* DEV: Prevent direct access.
+* DEV: Remove unused `cnSanitize::currency()` method.
+* DEV: Remove unused deprecated method `_format::prepareINPlaceholders()`.
+* DEV: Inline comments must end in full-stops, exclamation marks, or question marks.
+* DEV: phpDoc corrections and updates.
+* DEV: Remove unused deprecated `inc.processes.php` file.
+* DEV: Deprecate `cnSanitize::html()` and `cnSanitize::quicktag()`.
+* DEV: Remove unused method parameter.
+
 = 10.4.27 09/08/2022 =
 * TWEAK: First pass at refactoring the Metabox API. Convert the "Publish" metabox as a pathfinder.
 * TWEAK: Remove unused deprecated methods `cnFormObjects::registerEditMetaboxes()` and `cnFormObjects::metaboxName()`;
