--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,51 @@
 == Changelog ==
 
+= 10.4.31 10/20/2022 =
+* NEW: Introduce `\Request\Entry_Status` for user input request sanitization/validation.
+* NEW: Introduce `_nonce::create()`.
+* NEW: Introduce `\Utility\_token`.
+* NEW: Introduce `\Request\Template`.
+* NEW: Introduce `\Hook\Action\Admin\Template`.
+* NEW: Introduce `\Request\Role_Capability`.
+* NEW: Introduce `\Hook\Action\Admin\Role_Capability`.
+* NEW: Introduce `\Hook\Action`.
+* NEW: Introduce `\Hook\Action\Admin\Footer`.
+* NEW: Introduce `\Hook\Action\Admin\Plugin_Row`.
+* NEW: Introduce `\Hook\Action\Admin\Plugin_Tab`.
+* TWEAK: Refactor admin delete entry action links to remove use of the deprecated `cnFormObjects::tokenURL()` method.
+* TWEAK: Refactor `cnAdminActions::setEntryStatus()` to utilize `\Request\Entry_Status`, `_nonce::action()`, and `_validate::adminReferer()`.
+* TWEAK: Remove use of deprecated `cnFormObjects::tokenURL()` method.
+* TWEAK: Remove obsolete `cellspacing` and `scope` table attributes.
+* TWEAK: Refactor `_validate::adminReferer()` and `_validate::ajaxReferer()` to include an `$item` parameter.
+* TWEAK: Update instances of `_validate::adminReferer()` to utilize the `$item` parameter to remove code duplication.
+* TWEAK: Utilize `\Request\Admin_Action` to get request action.
+* TWEAK: Refactor the `cn_manage_actions` nonce field to utilize `_nonce::field()` and be validated using `_validate::adminReferer()`.
+* TWEAK: Add trialing parenthesis to exit.
+* TWEAK: Refactor `\Request\_nonce` to utilize `_nonce` utility constant/methods.
+* TWEAK: First pass at removing use of deprecated `cnFormObjects` nonce methods.
+* TWEAK: Refactor the template admin actions to utilize `\Request\Template` and `\Hook\Action\Admin\Template`.
+* TWEAK: Utilize `Request\Nonce` for creating and validating the vCard download.
+* TWEAK: Refactor the role capability admin actions to utilize `\Request\Role_Capability` and `\Hook\Action\Admin\Role_Capability`.
+* TWEAK: Remove unused messages from `cnMessage`.
+* TWEAK: Register the template actions on the `admin_init` hook.
+* TWEAK: Utilize `\Hook\Action` do namespaced action callbacks.
+* TWEAK: Refactor to utilize `\Hook\Action\Admin\Footer`.
+* TWEAK: Refactor to utilize `\Hook\Action\Admin\Plugin_Row`.
+* TWEAK: Refactor to utilize `\Hook\Action\Admin\Plugin_Tab`.
+* DEV: The output of `_::highlight_var_dump()` should be wrapped in a `div`.
+* BUG: Run system info token through `sanitize_key()` so it will match the request sanitization.
+* BUG: Do not show the "View" link on the Manage admin page when the entry is in the moderation queue.
+* BUG: Check for both entry status and visibility when created the download link for the vCard.
+* BUG: The `highlight_string()` should return, not echo.
+* OTHER: Correct misspellings.
+* DEV: Rename nonce URL to be more descriptive.
+* DEV: Remove commented out unused code.
+* DEV: phpDoc corrections.
+* DEV: phpDoc updates.
+* DEV: Add missing phpDoc.
+* DEV: Remove unused import.
+* DEV: Add inline comment.
+
 = 10.4.30 10/05/2022 =
 * NEW: Introduce the `Color_Picker` field to the Fields API.
 * NEW: Introduce the `Slider` field to the Fields API.
