--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,32 @@
 == Changelog ==
 
+= 10.4.35 12/15/2022 =
+* NEW: Introduce `_validate::isStringNotEmpty()`.
+* NEW: Introduce `cnAddress::setType()` and `cnAddress::getName()`.
+* NEW: Introduce `_sanitize::integer()`.
+* NEW: Introduce the `Connections_Directory/Admin/Page/Tools/Tab/Import` action.
+* TWEAK: Ensure strings are passed to `str_pad()` and `strlen()` to prevent deprecation notifications in PHP >= 8.1.
+* TWEAK: Set the default value of Field\Rich_Text and Field\Textarea to empty strings instead of null.
+* TWEAK: Return empty string and not null if country name is not set.
+* TWEAK: Remove unnecessary usages of `cnSanitize::field() "raw" in `cnEntry_Collection_Item`.
+* TWEAK: Add validation and formatting to several methods in `cnEntry_Collection_Item`.
+* TWEAK: Add validation to setting methods in `cnAddress` before setting object properties.
+* TWEAK: Add validation to `cnEntry_Collection_Item::setVisibility()` to ensure only valid types can be set.
+* TWEAK: Refactor `cnAddress::__construct()` to use object setters.
+* TWEAK: Remove the unused `cnAddress::getTypes()` method.
+* TWEAK: Utilize `_sanitize::integer()` instead of `cnSanitize::integer()` in `cnSanitize::string()`.
+* TWEAK: Refactoring of `cnEntry::getOrder()` and `cnEntry::setOrder()` to default to `0` and utilize `_sanitize::integer()`.
+* TWEAK: Refactor `cnMetabox_Process::sanitize()` to remove use of deprecated `cnSanitize::string()`.
+* TWEAK: Refactor `cnSanitize::field()` to remove use of deprecated `cnSanitize::string()`.
+* TWEAK: Remove unused deprecated `cnSanitize::integer()` method.
+* TWEAK: Refactor `_validate::isInteger()` and `_validate::isPositiveInteger()` to ensure the correct result across additional inputs.
+* TWEAK: Remove usages of `cnSanitize::field()` with the `raw` context.
+* TWEAK: Move the rendering of the postbox to bulk import categories to the new `Connections_Directory/Admin/Page/Tools/Tab/Import` action hook.
+* DEV: Remove unused commented out line of code.
+* DEV: Inline comments must end in full-stops, exclamation marks, or question marks.
+* DEV: phpDoc corrections.
+* DEV: Deprecated `cnSanitize::string()`.
+
 = 10.4.34 12/02/2022 =
 * NEW: Introduce `_format::secondsToHuman()`.
 * TWEAK: Update deprecation message for the number input field type.
