--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,17 @@
 == Changelog ==
 
+= 10.4.36 01/10/2023 =
+* NOTICE: Bump min PHP version to 7.0.
+* TWEAK: Update the dashboard news feed to URL to `https`.
+* TWEAK: Simplify return value logic.
+* TWEAK: Bump minimum support version of Yoast SEO to 15.2. Remove use of deprecated method `WPSEO_Utils::get_title_separator()`.
+* TWEAK: Add function exists check for Yoast SEO before checking if the `get_title_separator()` method exists.
+* BUG: Correct the classname check.
+* BUG: Ensure the correct `update_term_cache()` function is called to prevent cache pollution.
+* OTHER: Correct misspellings.
+* DEV: Move polyfill functions to separate files and include them as dependencies.
+* DEV: phpDoc corrections.
+
 = 10.4.35 12/15/2022 =
 * NEW: Introduce `_validate::isStringNotEmpty()`.
 * NEW: Introduce `cnAddress::setType()` and `cnAddress::getName()`.
