--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,40 @@
 == Changelog ==
 
+= 10.4.43 05/24/2023 =
+* NEW: Introduce `CN_REST_Entry_Controller::_sanitize()` and `CN_REST_Entry_Controller::_validate()`.
+* NEW: Introduce the `Connections_Directory/API/REST/Controller/Entry/Get_Items/Arguments` filter.
+* TWEAK: Remove unnecessary local variables.
+* TWEAK: Make `cnEntry_Action::copyImages()` public.
+* TWEAK: Assign local variable to object property and then return.
+* TWEAK: Tweak string concatenation.
+* TWEAK: Minor optimization to check for the existing entry slugs within similar slugs before creating an indexed iteration of the slug.
+* TWEAK: If the supplied entry slug is the same as th existing entry slug, do not attempt to a unique slug.
+* TWEAK: Remove unnecessary parentheses.
+* TWEAK: Replace deprecated `cnArray::get()` with `_array::get()`.
+* TWEAK: Type cast is redundant.
+* TWEAK: Remove use of deprecated `cnOutput` object. Replaced with `cnEntry_HTML`.
+* TWEAK: Move REST controllers classes to the autoloader.
+* TWEAK: Move the REST register routes hook into `Connections_Directory::hooks()`.
+* TWEAK: Rename `cnAPI` to `\API\REST\Routes`.
+* TWEAK: Cache the result of `CN_REST_Entry_Controller::get_item_schema()`.
+* TWEAK: Replace deprecated `cnFormatting::toBoolean()` with `_format::toBoolean()`.
+* TWEAK: The value returned from `cnEntry::getStatus()` does not require sanitization each time it is called.
+* TWEAK: Improve validation in `cnEntry::setStatus()`.
+* TWEAK: Minor optimization in `cnEntry_Action::process()`. Call `$entry->getStatus()` only once instead of multiple times.
+* TWEAK: Refactor `cnEntry_Action::copyImages()` to support whether to copy the image variations.
+* TWEAK: First pass at implementing update entry item via a REST API request.
+* TWEAK: Rename class `CN_REST_Entry_Controller` to `Connections_Directory\API\REST\Endpoint\Entry`.
+* TWEAK: Rename file `class.cn-rest-entry-controller.php` to `Entry.php`.
+* BUG: Ensure the directory homepage base URL is set when returning the REST API request results.
+* OTHER: Correct misspellings.
+* DEV: phpDoc corrections.
+* DEV: phpDoc updates.
+* DEV: Remove unused commented out code.
+* DEV: When a multi-item array uses associative keys, each value should start on a new line.
+* DEV: Add method and return types.
+* DEV: Correct code formatting.
+* DEV: Fix phpDoc alignment.
+
 = 10.4.42 05/08/2023 =
 * NEW: Introduce `Shortcode\Get_HTML`.
 * TWEAK: Move `cnShortcode_Connections` to the deprecated folder.
