--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,33 @@
 == Changelog ==
 
+= 10.4.44 05/24/2023 =
+* NEW: Add the `exclude`, `include`, `offset`, `categories`, and `categories_exclude` parameters to `Entry::get_collection_params()`.
+* TWEAK: Remove instances of using parameter default value.
+* TWEAK: Remove unused and unnecessary parameter from `Entry::get_entries()`.
+* TWEAK: Add the format parameter to the email and social schema.
+* TWEAK: Deprecate the `id` parameter in favor of the `include` parameter. The `id` parameter will be used as the default parameter value if set.
+* TWEAK: Deprecate the `category_in` parameter in favor of the `tax_relation` parameter. The `category_in` (default `false`) will be used as the default parameter value if set.
+* TWEAK: Rename action from `Connections_Directory/API/REST/Entry/After_Update` to `Connections_Directory/API/REST/Controller/Entry/Update/After`.
+* TWEAK: Rename action `rest_delete_cn_entry` to `Connections_Directory/API/REST/Controller/Entry/Delete/After`.
+* TWEAK: Rename action from `rest_prepare_cn_entry` to `Connections_Directory/API/REST/Controller/Entry/Prepare_Item/Response`.
+* TWEAK: Add deprecated action/filter for renamed hooks.
+* TWEAK: Remove direct access check.
+* TWEAK: Remove deprecated use of `cnArray`.
+* TWEAK: Rename `class.settings.php` to `Settings.php`.
+* TWEAK: Permit the admin role to utilize an expanded range of HTML tags with term descriptions.
+* TWEAK: Rename the REST Settings API filters.
+* BUG: Correct the namespace name for the Settings REST API Route.
+* OTHER: Correct misspellings.
+* DEV: Remove unused commented out code.
+* DEV: Rename variable to make it more clear of its purpose.
+* DEV: Add a todo.
+* DEV: Remove use of unnecessary local variable.
+* DEV: Inline comments must end in full-stops, exclamation marks, or question marks.
+* DEV: Move file phpDoc to file head.
+* DEV: Correct placement of IDE `@noinspection` tag.
+* DEV: phpDoc corrections.
+* DEV: phpDoc updates.
+
 = 10.4.43 05/24/2023 =
 * NEW: Introduce `CN_REST_Entry_Controller::_sanitize()` and `CN_REST_Entry_Controller::_validate()`.
 * NEW: Introduce the `Connections_Directory/API/REST/Controller/Entry/Get_Items/Arguments` filter.
