--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,17 @@
 == Changelog ==
 
-= 10.4.44 05/24/2023 =
+= 10.4.45 06/08/2023 =
+* TWEAK: Remove unnecessary direct access check.
+* TWEAK: Add the `detailed` query argument schema to the Countries collection parameters.
+* TWEAK: Add `code` query argument schema to the Countries collections endpoint parameters.
+* TWEAK: Remove deprecated use of `cnArray`.
+* TWEAK: Rename class `CN_REST_Countries_Controller` to `Connections_Directory\API\REST\Endpoint\Countries`.
+* TWEAK: Rename file `class.cn-rest-countries-controller.php` to `Countries.php`.
+* TWEAK: Refactor how REST Routes and Endpoints are registered to optimize loading using a trait to reduce code duplication.
+* DEV: phpDoc updates.
+* DEV: Add return type declaration.
+
+= 10.4.44 06/05/2023 =
 * NEW: Add the `exclude`, `include`, `offset`, `categories`, and `categories_exclude` parameters to `Entry::get_collection_params()`.
 * TWEAK: Remove instances of using parameter default value.
 * TWEAK: Remove unused and unnecessary parameter from `Entry::get_entries()`.
