--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,54 @@
 == Changelog ==
 
+= 10.4.46 06/08/2023 =
+* NEW: Introduce the Password form field.
+* NEW: Introduce the Button form element.
+* NEW: Introduce the Schema trait for form fields.
+* NEW: Introduce `Label::setLabelPosition()`.
+* NEW: Introduce `Attributes::addAttributes()`.
+* NEW: Introduce `Label::getText()`.
+* NEW: Introduce `Form` base class.
+* NEW: Introduce the Entry Moderate REST API Route.
+* NEW: Introduce the User Account REST API route with the login endpoint and a login form utilizing the Form/Fields API for form generation and field schema validation during the REST request.
+* NEW: Introduce `_::getClassShortName()`.
+* NEW: Introduce `_::callstack()`.
+* TWEAK: Remove unnecessary direct access check.
+* TWEAK: Remove deprecated use of `cnArray`.
+* TWEAK: Qualifier can be replaced with an import.
+* TWEAK: Remove error log function call. Should not be in production code.
+* TWEAK: Rename class `CN_REST_Autocomplete_Controller` to `Connections_Directory\API\REST\Endpoint\Autocomplete`.
+* TWEAK: Rename file `class.cn-rest-autocomplete-controller.php` to `Autocomplete.php`.
+* TWEAK: Move REST API related files into the `API/REST` folder and update the namespace to match.
+* TWEAK: Update hook names to match namespace.
+* TWEAK: Capitalize the `api` folder name.
+* TWEAK: Remove unused `api` property from `Connections_Directory`.
+* TWEAK: Change the `$label` property in the Label trait to public, so the methods for the `Field_Label` form field are accessible.
+* TWEAK: Add return type declaration to `Label::getLabelHTML()`.
+* TWEAK: Add declare strict types to `Label`.
+* TWEAK: Add declare strict types to `Field`.
+* TWEAK: Add declare strict types to `Input`.
+* TWEAK: Add declare strict types to `Attributes`.
+* TWEAK: Add declare strict types to `Label`.
+* TWEAK: Add declare strict types to `Select`.
+* TWEAK: Add declare strict types to `Text`.
+* TWEAK: Add declare strict types to `Autocomplete`.
+* TWEAK: Add the `Schema` trait to the `Input` form field.
+* TWEAK: Remove the `AutoComplete` attribute from the `Select` form field.
+* TWEAK: Add the `Autocomplete` attribute to the `Text` form field.
+* TWEAK: Add constructor to the `Text` form field.
+* TWEAK: Refactor the `Input` form field to initiate its properties using the constructor instead fgo the create method.
+* TWEAK: Refactor `Field` constructor and create method to require the properties parameter.
+* TWEAK: Remove unused variable.
+* DEV: phpDoc updates.
+* DEV: Inline comments must end in full-stops, exclamation marks, or question marks.
+* DEV: Removed unused commented out code.
+* DEV: Add function return type.
+* DEV: Add parameter type declaration.
+* DEV: Remove unused import.
+* DEV: Add dev @todo.
+* DEV: Add commented out code required for testing CSV exports.
+* DEV: Array alignment.
+
 = 10.4.45 06/08/2023 =
 * TWEAK: Remove unnecessary direct access check.
 * TWEAK: Add the `detailed` query argument schema to the Countries collection parameters.
