--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 10.4.54 10/20/2023 =
+* BUG: Use `Request::setVar()` to reset the pagination value when the offset count is greater than the total row count to prevent a potential query loop and PHP fatal error.
+
 = 10.4.53 10/16/2023 =
 * FEATURE: Add integration and support for the [Simple History plugin](https://wordpress.org/plugins/simple-history/).
 * TWEAK: Pass the `$args` parameter to the `cn_edit_terms` filter.
