--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,16 @@
 == Changelog ==
 
+= 10.4.55 10/26/2023 =
+* NEW: Introduce `Shortcode` abstract class to reduce code duplication when registering shortcodes with WordPress.
+* TWEAK: Replace instances of `strip_tags()` with `wp_strip_all_tags()`.
+* TWEAK: Add an `is_string()` check to `_string::stripTags()` to help ensure no PHP deprecation notices are thrown.
+* TWEAK: Utilize `_string::stripTags()` instead of `strip_tags()` to help ensure no PHP deprecations notices.
+* TWEAK: Remove unused commented out code referencing a method long removed in `cnRetrieve`.
+* TWEAK: Remove use of deprecated `cnShortcode::addFilterRegistry()` calls in `Shortcode\Entry`.
+* TWEAK: Refactor `Shortcode\Entry` to utilize `Shortcode` to reduce code duplication.
+* BUG: Do not overwrite the `category` shortcode value if the `cn-cat` request variable is empty.
+* DEV: phpDoc corrections.
+
 = 10.4.54 10/20/2023 =
 * BUG: Use `Request::setVar()` to reset the pagination value when the offset count is greater than the total row count to prevent a potential query loop and PHP fatal error.
 
