--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,13 @@
 == Changelog ==
 
+= 10.4.57 11/17/2023 =
+* NEW: Introduce `CN_Walker_Term_Select_List_Enhanced::generatePlaceholder()`.
+* TWEAK: Ensure the `\Simple_History\Simple_History` class exists before adding the Simple History logger registration hook to prevent possible fatal errors when older version of Simple History are installed.
+* TWEAK: Ensure the core WP default filters exists for WP User authentication during the REST API request.
+* TWEAK: Simply direct access exit.
+* TWEAK: Refactor `\Form\Field\Option::prepareAttributes()` to process custom attributes.
+* TWEAK: Refactor `CN_Walker_Term_Select_List_Enhanced::render()` to utilize `generatePlaceholder()`.
+
 = 10.4.56 11/10/2023 =
 * BUG: Correct parameter used when defining the "remember me" checkbox in the login form..
 * BUG: Prevent fatal PHP error if `wp_signon()` returns and instance of `WP_Error` instead of an instance of `WP_User`.
