--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,22 @@
 == Changelog ==
 
+= 10.4.61 01/19/2024 =
+* FEATURE: Introduce the WP-CLI commands `core version` and `tables <command>`.
+* FEATURE: Introduce the Database Reset Tool.
+* NEW: Introduce `\Request::isCLI()`.
+* TWEAK: Replace deprecated `cnShortcode::addFilterRegistry()` calls with `\Template\Hook_Transient::add()`.
+* TWEAK: Use instance of `Term` in `\cnTemplatePart::categoryBreadcrumb()`.
+* TWEAK: Route to the PHP error log, developer deprecated notices when running WP-CLI commands.
+* TWEAK: Add JSDoc for global variable to enable code completion.
+* BUG: Remove empty strings from the page title pieces to prevent leading/trailing page title separators from displaying.
+* OTHER: Correct misspellings.
+* DEV: phpDoc corrections.
+* DEV: Add comment to `phpcs.xml`.
+* WPCS: Inline comments must end in full-stops, exclamation marks, or question marks.
+* WPCS: Spaces must be used for mid-line alignment; tabs are not allowed.
+* WPCS: Disable `PEAR.NamingConventions.ValidClassName.StartWithCapital` and `WordPress.NamingConventions.PrefixAllGlobals.NonPrefixedClassFound`.
+* WPCS: Ignore WPCS flags in `Utility\_deprecated`.
+
 = 10.4.60 12/22/2023 =
 * NEW: Introduce `CN_Walker_Term_Select_List_Enhanced::generateSelectAllOption()`.
 * NEW: Introduce `CN_Walker_Term_Select_List_Enhanced::generateSelectNoneOption()`.
