--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,30 @@
 == Changelog ==
 
+= 10.4.66 11/13/2024 =
+* FEATURE: Update the Carousel Block to include an option to link to the Directory Entry Profile.
+* NEW: Introduce `Field\Term_Radio_Group`.
+* NEW: Introduce `\Entry\Functions::email()` and `\Entry\Functions::phone()`.
+* NEW: Introduce `\Utility\_::maybeEcho()`.
+* NEW: Introduce `cnRetrieve::countries()` and `cnRetrieve::regions()`.
+* NEW: Add the search by country and regions (state) to the advanced search fields.
+* TWEAK: Slight refactor of `\Form\Search::keywordField`.
+* TWEAK: Add `nocache` to login URL.
+* TWEAK: Utilize native PHP `DateTime::createFromFormat()` instead of the backward support polyfill.
+* TWEAK: Add `_wpnonce` to the user login form.
+* BUG: Do not render the excerpt `div` if there is no excerpt text.
+* BUG: Using ${var} in strings is deprecated, use {$var} instead.
+* OTHER: Correct misspellings.
+* OTHER: Bump Tested up to in README.TXT.
+* OTHER: Limit README.txt tags to 5.
+* OTHER: Reflow @todo.
+* OTHER: Add `@todo`.
+* OTHER: Correct phpDoc typo.
+* OTHER: phpDoc corrections.
+* I18N: Update Italian translation.
+* WPCS: Remove trailing space.
+* WPCS: Correct inline code comment.
+* WPCS: There must be exactly one blank line before the tags in a doc comment.
+
 = 10.4.65 02/28/2024 =
 * NEW: Introduce `Field\Term_Checkbox_Group`.
 * TWEAK: Make `\Form\Field\Select_Term::setQueryParameters()` chainable.
